[package]
name = "eos-chain"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
bitcoin_hashes = "0.7"
chrono = "0.4"
eosio-core-derive = { path = "../eosio-core-derive" }
hex = { version = "0.4", default-features = false }
keys = { package = "eos-keys", path = "../keys", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = { version = "0.2", optional = true }
serde_json = "1.0"

[dev-dependencies]
eos-rpc = { path = "../rpc" }

[features]
default = ["std"]
std = [
    "hex/std",
    "keys/std",
    "serde/std",
    "serde-big-array",
]
