[package]
name = "eos-chain"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
bitcoin_hashes = { version = "0.7", default-features = false }
chrono = { version = "0.4.10", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
eosio-core-derive = { path = "../eosio-core-derive" }
hex = { version = "0.4", default-features = false }
keys = { package = "eos-keys", path = "../keys", default-features = false }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
eos-rpc = { path = "../rpc" }

[features]
default = ["std"]
std = [
    "bitcoin_hashes/std",
    "chrono/default",
    "codec/std",
    "hex/std",
    "keys/std",
    "serde/std",
    "serde_json",
]
