[package]
name = "eos-keys"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"
description = "Pure Rust implementation of Secp256k1 crypto for Eos"

[dependencies]
bitcoin_hashes = "0.7"
byteorder = "1.2"
bytes = "0.4"
libsecp256k1 = { git = "https://github.com/bifrost-codes/libsecp256k1-rs" }
rand = "0.6"
rustc-hex = "2"
failure = "0.1"

[dev-dependencies]
hex = "=0.3.2"
