[package]
name = "eos-keys"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"
description = "Secp256k1 crypto for Eos"

[dependencies]
bitcoin_hashes = "0.7"
byteorder = "1.2"
rustc-hex = "2"

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.secp256k1]
git = "https://github.com/bifrost-codes/rust-secp256k1"
optional = true

[dev-dependencies]
hex = "=0.3.2"

[features]
default = ["std"]
std = [
    "secp256k1/std",
    "secp256k1/recovery",
    "secp256k1/rand-std",
]
