[package]
name = "eos-keys"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"
description = "Pure Rust implementation of Secp256k1 crypto for Eos"

[dependencies]
bitcoin_hashes = { version = "0.7", default-features = false }
byteorder = { version = "1.3", default-features = false }
hex = { version = "0.4", default-features = false }
libsecp256k1 = { git = "https://github.com/bifrost-codes/libsecp256k1.git", default-features = false, features = ["hmac"] }
rand = { version = "0.7", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
    "rand/std"
]
