[package]
name = "eos-primitives"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
eosio-core-derive = { path = "../eosio-core-derive" }
hex = { version = "0.4", default-features = false }
keys = { package = "eos-keys", path = "../keys" }

[dev-dependencies]
eosio-core-macros = { path = "../eosio-core-macros" }

[features]
default = []
std = []
internal-use-only-root-path-is-eosio = ["eosio-core-derive/internal-use-only-root-path-is-eosio"]
