[package]
name = "eos-rpc"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>", "Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
cfg-if = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
eosio = { git = "https://github.com/sagan-software/eosio-rust.git" }
eosio-abi = { git = "https://github.com/sagan-software/eosio-rust.git" }
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3.5", optional = true }
wasm-bindgen-futures = { version = "0.3.5", optional = true }
hyper = { version = "0.12", optional = true }
hyper-tls = { version = "0.3", optional = true }
stdweb = { version = "0.4.14", optional = true }
futures-util-preview = { version = "=0.3.0-alpha.16" }
tokio = { version = "0.1", optional = true }
failure = "0.1"
rpc_codegen = { version = "0.1", path = "rpc_codegen" }
primitives = { package = "eos-primitives", path = "../primitives" }
hex = "0.3"

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
keys = { package = "eos-keys", path = "../keys" }

[features]
default = ["use-hyper"]
use-web-sys = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]
use-hyper = ["hyper", "hyper-tls", "tokio"]
use-stdweb = ["stdweb"]
