[package]
name = "eos-rpc"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>", "Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
eosio-core = { path = "../eosio-core", features = ["internal-use-only-root-path-is-eosio"] }
eosio-core-macros = { path = "../eosio-core-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3.5", optional = true }
wasm-bindgen-futures = { version = "0.3.5", optional = true }
hyper = { version = "0.12", optional = true }
hyper-tls = { version = "0.3", optional = true }
stdweb = { version = "0.4.14", optional = true }
tokio = { version = "0.1", optional = true }
failure = "0.1"
rpc_codegen = { version = "0.1", path = "rpc_codegen" }
primitives = { package = "eos-primitives", path = "../primitives" }
hex = "0.3"

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
keys = { package = "eos-keys", path = "../keys" }

[features]
default = ["use-hyper"]
use-web-sys = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]
use-hyper = ["hyper", "hyper-tls", "tokio"]
use-stdweb = ["stdweb"]
