[package]
name = "rpc_codegen"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>", "Jamie Deng <djptux@gmail.com>"]
description = "Generate function fetch for each different params"
license = "MIT"
keywords = ["rpc", "fetch", "http", "proc-macro"]
edition = "2018"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
